--- a/svm.ipynb
+++ b/svm.ipynb
@@ -21,11 +21,29 @@
     "from sklearn.metrics import classification_report\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
