--- a/logistic.ipynb
+++ b/logistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,181 @@
       "16  Arizona  Cardinals  2000  893926  387475  506451    17            65711.0\n",
       "17  Atlanta    Falcons  2000  964579  422814  541765     1            54626.0\n",
       "18  Atlanta    Falcons  2000  964579  422814  541765     2            75466.0\n",
-      "19  Atlanta    Falcons  2000  964579  422814  541765     3            73025.0\n"
+      "19  Atlanta    Falcons  2000  964579  422814  541765     3            73025.0\n",
+      "    year week             home_team             away_team  \\\n",
+      "0   2000    1     Minnesota Vikings         Chicago Bears   \n",
+      "1   2000    1    Kansas City Chiefs    Indianapolis Colts   \n",
+      "2   2000    1   Washington Redskins     Carolina Panthers   \n",
+      "3   2000    1       Atlanta Falcons   San Francisco 49ers   \n",
+      "4   2000    1   Pittsburgh Steelers      Baltimore Ravens   \n",
+      "5   2000    1      Cleveland Browns  Jacksonville Jaguars   \n",
+      "6   2000    1  New England Patriots  Tampa Bay Buccaneers   \n",
+      "7   2000    1    New Orleans Saints         Detroit Lions   \n",
+      "8   2000    1       New York Giants     Arizona Cardinals   \n",
+      "9   2000    1        Dallas Cowboys   Philadelphia Eagles   \n",
+      "10  2000    1       Oakland Raiders    San Diego Chargers   \n",
+      "11  2000    1        Miami Dolphins      Seattle Seahawks   \n",
+      "12  2000    1     Green Bay Packers         New York Jets   \n",
+      "13  2000    1         Buffalo Bills      Tennessee Titans   \n",
+      "14  2000    1        St. Louis Rams        Denver Broncos   \n",
+      "15  2000    2     Minnesota Vikings        Miami Dolphins   \n",
+      "16  2000    2    Cincinnati Bengals      Cleveland Browns   \n",
+      "17  2000    2    Indianapolis Colts       Oakland Raiders   \n",
+      "18  2000    2  Tampa Bay Buccaneers         Chicago Bears   \n",
+      "19  2000    2         Buffalo Bills     Green Bay Packers   \n",
+      "\n",
+      "                  winner  tie  day          date     time  pts_win  pts_loss  \\\n",
+      "0      Minnesota Vikings  NaN  Sun   September 3   1:00PM       30        27   \n",
+      "1     Indianapolis Colts  NaN  Sun   September 3   1:00PM       27        14   \n",
+      "2    Washington Redskins  NaN  Sun   September 3   1:01PM       20        17   \n",
+      "3        Atlanta Falcons  NaN  Sun   September 3   1:02PM       36        28   \n",
+      "4       Baltimore Ravens  NaN  Sun   September 3   1:02PM       16         0   \n",
+      "5   Jacksonville Jaguars  NaN  Sun   September 3   1:02PM       27         7   \n",
+      "6   Tampa Bay Buccaneers  NaN  Sun   September 3   1:02PM       21        16   \n",
+      "7          Detroit Lions  NaN  Sun   September 3   1:03PM       14        10   \n",
+      "8        New York Giants  NaN  Sun   September 3   1:04PM       21        16   \n",
+      "9    Philadelphia Eagles  NaN  Sun   September 3   4:05PM       41        14   \n",
+      "10       Oakland Raiders  NaN  Sun   September 3   4:15PM        9         6   \n",
+      "11        Miami Dolphins  NaN  Sun   September 3   4:16PM       23         0   \n",
+      "12         New York Jets  NaN  Sun   September 3   4:20PM       20        16   \n",
+      "13         Buffalo Bills  NaN  Sun   September 3   8:35PM       16        13   \n",
+      "14        St. Louis Rams  NaN  Mon   September 4   9:07PM       41        36   \n",
+      "15     Minnesota Vikings  NaN  Sun  September 10  12:00PM       13         7   \n",
+      "16      Cleveland Browns  NaN  Sun  September 10   1:00PM       24         7   \n",
+      "17       Oakland Raiders  NaN  Sun  September 10   1:00PM       38        31   \n",
+      "18  Tampa Bay Buccaneers  NaN  Sun  September 10   1:01PM       41         0   \n",
+      "19         Buffalo Bills  NaN  Sun  September 10   1:01PM       27        18   \n",
+      "\n",
+      "    yds_win  turnovers_win  yds_loss  turnovers_loss home_team_name  \\\n",
+      "0       374              1       425               1        Vikings   \n",
+      "1       386              2       280               1         Chiefs   \n",
+      "2       396              0       236               1       Redskins   \n",
+      "3       359              1       339               1        Falcons   \n",
+      "4       336              0       223               1       Steelers   \n",
+      "5       398              0       249               1         Browns   \n",
+      "6       296              1       278               1       Patriots   \n",
+      "7       187              2       252               3         Saints   \n",
+      "8       395              2       355               4         Giants   \n",
+      "9       425              3       167               2        Cowboys   \n",
+      "10      233              0       255               4        Raiders   \n",
+      "11      308              1       143               6       Dolphins   \n",
+      "12      379              1       211               2        Packers   \n",
+      "13      266              0       172               1          Bills   \n",
+      "14      513              3       424               0           Rams   \n",
+      "15      468              4       209               1        Vikings   \n",
+      "16      354              1       318               3        Bengals   \n",
+      "17      359              0       462               3          Colts   \n",
+      "18      327              0       165               4     Buccaneers   \n",
+      "19      309              1       274               3          Bills   \n",
+      "\n",
+      "   home_team_city away_team_name away_team_city  \n",
+      "0       Minnesota          Bears        Chicago  \n",
+      "1     Kansas City          Colts   Indianapolis  \n",
+      "2      Washington       Panthers       Carolina  \n",
+      "3         Atlanta          49ers  San Francisco  \n",
+      "4      Pittsburgh         Ravens      Baltimore  \n",
+      "5       Cleveland        Jaguars   Jacksonville  \n",
+      "6     New England     Buccaneers      Tampa Bay  \n",
+      "7     New Orleans          Lions        Detroit  \n",
+      "8        New York      Cardinals        Arizona  \n",
+      "9          Dallas         Eagles   Philadelphia  \n",
+      "10        Oakland       Chargers      San Diego  \n",
+      "11          Miami       Seahawks        Seattle  \n",
+      "12      Green Bay           Jets       New York  \n",
+      "13        Buffalo         Titans      Tennessee  \n",
+      "14      St. Louis        Broncos         Denver  \n",
+      "15      Minnesota       Dolphins          Miami  \n",
+      "16     Cincinnati         Browns      Cleveland  \n",
+      "17   Indianapolis        Raiders        Oakland  \n",
+      "18      Tampa Bay          Bears        Chicago  \n",
+      "19        Buffalo        Packers      Green Bay  \n",
+      "            team team_name  year  wins  loss  points_for  points_against  \\\n",
+      "0          Miami  Dolphins  2000    11     5         323             226   \n",
+      "1   Indianapolis     Colts  2000    10     6         429             326   \n",
+      "2       New York      Jets  2000     9     7         321             321   \n",
+      "3        Buffalo     Bills  2000     8     8         315             350   \n",
+      "4    New England  Patriots  2000     5    11         276             338   \n",
+      "5      Tennessee    Titans  2000    13     3         346             191   \n",
+      "6      Baltimore    Ravens  2000    12     4         333             165   \n",
+      "7     Pittsburgh  Steelers  2000     9     7         321             255   \n",
+      "8   Jacksonville   Jaguars  2000     7     9         367             327   \n",
+      "9     Cincinnati   Bengals  2000     4    12         185             359   \n",
+      "10     Cleveland    Browns  2000     3    13         161             419   \n",
+      "11       Oakland   Raiders  2000    12     4         479             299   \n",
+      "12        Denver   Broncos  2000    11     5         485             369   \n",
+      "13   Kansas City    Chiefs  2000     7     9         355             354   \n",
+      "14       Seattle  Seahawks  2000     6    10         320             405   \n",
+      "15     San Diego  Chargers  2000     1    15         269             440   \n",
+      "16      New York    Giants  2000    12     4         328             246   \n",
+      "17  Philadelphia    Eagles  2000    11     5         351             245   \n",
+      "18    Washington  Redskins  2000     8     8         281             269   \n",
+      "19        Dallas   Cowboys  2000     5    11         294             361   \n",
+      "\n",
+      "    points_differential  margin_of_victory  strength_of_schedule  \\\n",
+      "0                    97                6.1                   1.0   \n",
+      "1                   103                6.4                   1.5   \n",
+      "2                     0                0.0                   3.5   \n",
+      "3                   -35               -2.2                   2.2   \n",
+      "4                   -62               -3.9                   1.4   \n",
+      "5                   155                9.7                  -1.3   \n",
+      "6                   168               10.5                  -2.5   \n",
+      "7                    66                4.1                  -0.2   \n",
+      "8                    40                2.5                  -1.4   \n",
+      "9                  -174              -10.9                   0.4   \n",
+      "10                 -258              -16.1                   1.5   \n",
+      "11                  180               11.3                  -1.5   \n",
+      "12                  116                7.3                  -2.2   \n",
+      "13                    1                0.1                   0.6   \n",
+      "14                  -85               -5.3                   1.6   \n",
+      "15                 -171              -10.7                   2.6   \n",
+      "16                   82                5.1                  -2.7   \n",
+      "17                  106                6.6                  -3.6   \n",
+      "18                   12                0.8                   0.2   \n",
+      "19                  -67               -4.2                  -0.4   \n",
+      "\n",
+      "    simple_rating  offensive_ranking  defensive_ranking     playoffs  \\\n",
+      "0             7.1                0.0                7.1     Playoffs   \n",
+      "1             7.9                7.1                0.8     Playoffs   \n",
+      "2             3.5                1.4                2.2  No Playoffs   \n",
+      "3             0.0                0.5               -0.5  No Playoffs   \n",
+      "4            -2.5               -2.7                0.2  No Playoffs   \n",
+      "5             8.3                1.5                6.8     Playoffs   \n",
+      "6             8.0                0.0                8.0     Playoffs   \n",
+      "7             3.9                0.6                3.3  No Playoffs   \n",
+      "8             1.1                3.2               -2.1  No Playoffs   \n",
+      "9           -10.5               -8.1               -2.4  No Playoffs   \n",
+      "10          -14.6               -9.1               -5.5  No Playoffs   \n",
+      "11            9.7                8.0                1.8     Playoffs   \n",
+      "12            5.0                7.8               -2.7     Playoffs   \n",
+      "13            0.6                0.1                0.6  No Playoffs   \n",
+      "14           -3.7               -1.4               -2.3  No Playoffs   \n",
+      "15           -8.1               -3.7               -4.4  No Playoffs   \n",
+      "16            2.4               -1.3                3.8     Playoffs   \n",
+      "17            3.1                1.0                2.1     Playoffs   \n",
+      "18            1.0               -2.9                3.8  No Playoffs   \n",
+      "19           -4.6               -1.5               -3.0  No Playoffs   \n",
+      "\n",
+      "        sb_winner  \n",
+      "0    No Superbowl  \n",
+      "1    No Superbowl  \n",
+      "2    No Superbowl  \n",
+      "3    No Superbowl  \n",
+      "4    No Superbowl  \n",
+      "5    No Superbowl  \n",
+      "6   Won Superbowl  \n",
+      "7    No Superbowl  \n",
+      "8    No Superbowl  \n",
+      "9    No Superbowl  \n",
+      "10   No Superbowl  \n",
+      "11   No Superbowl  \n",
+      "12   No Superbowl  \n",
+      "13   No Superbowl  \n",
+      "14   No Superbowl  \n",
+      "15   No Superbowl  \n",
+      "16   No Superbowl  \n",
+      "17   No Superbowl  \n",
+      "18   No Superbowl  \n",
+      "19   No Superbowl  \n"
      ]
     }
    ],
@@ -47,8 +221,12 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import loguniform\n",
     "\n",
-    "df = pd.read_csv('attendance.csv')\n",
-    "print(df.head(20))"
+    "df_attendance = pd.read_csv('attendance.csv')\n",
+    "df_games = pd.read_csv('games.csv')\n",
+    "df_standings = pd.read_csv('standings.csv')\n",
+    "print(df_attendance.head(20))\n",
+    "print(df_games.head(20))\n",
+    "print(df_standings.head(20))"
    ]
   },
   {
