--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'np_utils' from 'keras.utils' (/Users/tylerbang/miniconda3/lib/python3.11/site-packages/keras/utils/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mscikeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mwrappers\u001b[39;00m \u001b[39mimport\u001b[39;00m KerasClassifier\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m to_categorical\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mkeras\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m np_utils\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m accuracy_score\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tylerbang/Development/csc-4240-course-project/fnn.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomizedSearchCV\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'np_utils' from 'keras.utils' (/Users/tylerbang/miniconda3/lib/python3.11/site-packages/keras/utils/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "# import the usual libraries\n",
     "import tensorflow as tf\n",
@@ -12,11 +24,10 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras.layers import Dropout\n",
-    "from keras.wrappers.scikit_learn import KerasRegressor\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from keras.datasets import mnist\n",
+    "from scikeras.wrappers import KerasRegressor\n",
+    "from scikeras.wrappers import KerasClassifier\n",
     "from keras.utils import to_categorical\n",
-    "from keras.utils import np_utils\n",
+    "# from keras.utils import np_utils\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
@@ -39,8 +50,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
