--- a/linear.ipynb
+++ b/linear.ipynb
@@ -211,11 +211,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import classification_report\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
