--- a/linear.ipynb
+++ b/linear.ipynb
@@ -218,6 +218,7 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "\n",
     "df_attendance = pd.read_csv('attendance.csv')\n",
     "df_games = pd.read_csv('games.csv')\n",
@@ -232,7 +233,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'fit_intercept': [True, False],\n",
+    "    'normalize': [True, False]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(model, param_grid, scoring=scorer, cv=5)\n",
+    "grid_result = grid_search.fit() # enter our X and Y values here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = grid_result.best_params_\n",
+    "print(\"Best Hyperparameters:\", best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = grid_result.best_estimator_\n",
+    "y_pred = best_model.predict()\n",
+    "mse = mean_squared_error()\n",
+    "print(\"Final Mean Squared Error on Test Set:\", mse)"
+   ]
   }
  ],
  "metadata": {
