--- a/svm.ipynb
+++ b/svm.ipynb
@@ -16,9 +16,10 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import SVR\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "import pandas as pd"
    ]
   },
@@ -36,6 +37,69 @@
     "df_attendance = pd.read_csv('attendance.csv')\n",
     "df_games = pd.read_csv('games.csv')\n",
     "df_standings = pd.read_csv('standings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SVR()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "    'C': [0.1, 1.0, 10.0],\n",
+    "    'epsilon': [0.1, 0.2, 0.5]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(model, param_grid, scoring=scorer, cv=5)\n",
+    "grid_result = grid_search.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = grid_result.best_params_\n",
+    "print(\"Best Hyperparameters:\", best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = grid_result.best_estimator_\n",
+    "y_pred = best_model.predict()\n",
+    "mse = mean_squared_error()\n",
+    "print(\"Final Mean Squared Error on Test Set:\", mse)"
    ]
   }
  ],
