--- a/svm.ipynb
+++ b/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Here, we put the csv files into dataframe and we try to fit them into X and Y"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_attendance = pd.read_csv('attendance.csv')\n",
     "df_games = pd.read_csv('games.csv')\n",
-    "df_standings = pd.read_csv('standings.csv')"
+    "df_standings = pd.read_csv('standings.csv')\n",
+    "\n",
+    "y_feature_name = 'weekly_attendance'\n",
+    "filter_y = df_attendance.dropna(subset=[y_feature_name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        77434.0\n",
+      "1        66009.0\n",
+      "3        71801.0\n",
+      "4        66985.0\n",
+      "5        44296.0\n",
+      "          ...   \n",
+      "10841    71504.0\n",
+      "10842    77296.0\n",
+      "10843    63246.0\n",
+      "10844    66083.0\n",
+      "10845    90646.0\n",
+      "Name: weekly_attendance, Length: 10208, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = 0 # TODO: put all of our features into\n",
+    "            #   here, make sure that we do not\n",
+    "            # include our Y features, which will be\n",
+    "            # weekly attendance\n",
+    "Y = filter_y[y_feature_name]\n",
+    "print(Y)\n"
    ]
   },
   {
