--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -35,14 +35,13 @@
     "from keras.layers import Dense\n",
     "from keras.layers import Dropout\n",
     "from scikeras.wrappers import KerasRegressor\n",
-    "from scikeras.wrappers import KerasClassifier\n",
     "from keras.utils import to_categorical\n",
     "# from keras.utils import np_utils\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "# other machine learning modules\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import KFold\n",
@@ -51,11 +50,36 @@
     "\n",
     "# commonly used modules\n",
     "import numpy as np\n",
-    "import pandas\n",
+    "import pandas as pd\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "print(tf.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = 0\n",
+    "X_valid = 0\n",
+    "X_test = 0\n",
+    "\n",
+    "Y_train = 0\n",
+    "Y_valid = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train) # TODO: need training data\n",
+    "X_test = scaler.transform(X_test)"
    ]
   }
  ],
