--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -62,7 +62,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "# TODO: Data team will handle putting in the training, validation, and test data\n",
     "X_train = 0\n",
     "X_valid = 0\n",
     "X_test = 0\n",
