developed the FNN

--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -76,7 +76,8 @@
     "X_test = 0\n",
     "\n",
     "Y_train = 0\n",
-    "Y_valid = 0\n"
+    "Y_valid = 0\n",
+    "Y_test = 0\n"
    ]
   },
   {
@@ -88,6 +89,83 @@
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train) # TODO: need training data\n",
     "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(optimizer='adam', activation='relu', neurons=64):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(neurons, input_dim=X_train.shape[1], activation=activation))\n",
+    "    model.add(Dense(1))\n",
+    "    model.compile(loss='mean_squared_error', optimizer=optimizer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = KerasRegressor(build_fn=create_model, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'optimizer': ['adam', 'sgd', 'rmsprop'],\n",
+    "    'activation': ['relu', 'tanh', 'sigmoid'],\n",
+    "    'neurons': [32, 64, 128]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scorer = make_scorer(mean_squared_error, greater_is_better=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = GridSearchCV(estimator=model, param_grid=param_grid, scoring=scorer, cv=5)\n",
+    "grid_result = grid.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = grid_result.best_params_\n",
+    "print(\"Best Hyperparameters:\", best_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = grid_result.best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "mse = mean_squared_error(Y_test, y_pred)\n",
+    "print(\"Final Mean Squared Error on Test Set:\", mse)"
    ]
   }
  ],
