Cleaned data with cities, null data removed

--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -47,6 +47,8 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "# commonly used modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -61,7 +63,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "excludeYears = [2000, 2001]\n",
+    "\n",
+    "df_attendance = pd.read_csv('attendance.csv')\n",
+    "df_attendance = df_attendance[~df_attendance['year'].isin(excludeYears)]\n",
+    "\n",
+    "df_games = pd.read_csv('games.csv')\n",
+    "df_games = df_games[~df_games['year'].isin(excludeYears)]\n",
+    "\n",
+    "df_standings = pd.read_csv('standings.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,13 +82,13 @@
    "outputs": [],
    "source": [
     "# TODO: Data team will handle putting in the training, validation, and test data\n",
-    "X_train = 0\n",
-    "X_valid = 0\n",
-    "X_test = 0\n",
+    "X = df_attendance.drop('weekly_attendance', axis=1)\n",
+    "Y = df_attendance['weekly_attendance']\n",
     "\n",
-    "Y_train = 0\n",
-    "Y_valid = 0\n",
-    "Y_test = 0\n"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "# X_valid = 0??\n",
+    "\n",
+    "# Y_valid = 0??\n"
    ]
   },
   {
