--- a/linear.ipynb
+++ b/linear.ipynb
@@ -223,6 +223,18 @@
     "df_attendance = pd.read_csv('attendance.csv')\n",
     "df_games = pd.read_csv('games.csv')\n",
     "df_standings = pd.read_csv('standings.csv')\n",
+    "\n",
+    "excludeYears = [2000, 2001]\n",
+    "\n",
+    "# Removes any rows containing a null value from the datasets\n",
+    "df_attendance = df_attendance[~df_attendance['year'].isin(excludeYears)]\n",
+    "df_attendance = df_attendance.dropna()\n",
+    "df_attendance = df_attendance.drop('team')\n",
+    "\n",
+    "df_games = df_games[~df_games['year'].isin(excludeYears)]\n",
+    "df_games = df_games.dropna()\n",
+    "df_standings = df_standings.dropna()\n",
+    "\n",
     "print(df_attendance.head(20))\n",
     "print(df_games.head(20))\n",
     "print(df_standings.head(20))"
