--- a/svm.ipynb
+++ b/svm.ipynb
@@ -41,7 +41,9 @@
     "df_standings = pd.read_csv('standings.csv')\n",
     "\n",
     "y_feature_name = 'weekly_attendance'\n",
-    "filter_y = df_attendance.dropna(subset=[y_feature_name])"
+    "\n",
+    "df_attendance = df_attendance.dropna()\n",
+    "filter_y = df_attendance[y_feature_name]\n"
    ]
   },
   {
@@ -69,7 +71,8 @@
     }
    ],
    "source": [
-    "X = 0 # TODO: put all of our features into\n",
+    "X = df_attendance.drop('weekly_attendance', axis=1) \n",
+    "    # TODO: put all of our features into\n",
     "            #   here, make sure that we do not\n",
     "            # include our Y features, which will be\n",
     "            # weekly attendance\n",
